Atualizar os clientes tmb com os métodos