@@ -44,21 +44,23 @@ public class Dist2_Cliente {
             }
         }
     }
-    
-    public static void cadastroMenu(){
+
+    public static void cadastroMenu() {
         clrscr();
         Scanner leia = new Scanner(System.in);
         System.out.println("Olá");
     }
-    
-    public static void clrscr(){
-    //Clears Screen in java
-    try {
-        if (System.getProperty("os.name").contains("Windows"))
-            new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-        else
-            Runtime.getRuntime().exec("clear");
-    } catch (IOException | InterruptedException ex) {}
-}
+
+    public static void clrscr() {
+        //Clears Screen in java
+        try {
+            if (System.getProperty("os.name").contains("Windows")) {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
+                Runtime.getRuntime().exec("clear");
+            }
+        } catch (IOException | InterruptedException ex) {
+        }
+    }
 
 }
